<resources>
    <string name="app_name">LaLigaTracker</string>
    <string name="clubes">Clubes</string>
    <string name="valor_mercado">Valor de Mercado</string>
    <string name="jugadores">Jugadores</string>
    <string name="club_name">Club Name</string>
    <string name="club_value">Club Value</string>
    <string name="player_number">#1</string>
    <string name="euros">€</string>
    <string name="toolbar_title">Titulo toolbar</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
</resources>