<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/value_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/usual_padding">

    <androidx.cardview.widget.CardView
        style="@style/cardViewsStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/usual_padding">

            <ImageView
                android:id="@+id/club_image"
                android:layout_width="@dimen/market_value_img_size"
                android:layout_height="@dimen/market_value_img_size"
                android:layout_gravity="center_vertical"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/club_name"
                    style="@style/textColor"
                    android:layout_width="@dimen/market_value_club_name_width"
                    android:layout_height="@dimen/market_value_club_name_height"
                    android:layout_marginStart="@dimen/usual_padding"
                    android:layout_marginTop="@dimen/usual_padding"
                    android:gravity="start"
                    android:textSize="@dimen/club_name_size_mv"
                    tools:text="@string/club_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/club_value"
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/usual_padding"
                        android:layout_marginStart="@dimen/usual_padding"
                        android:textSize="@dimen/club_name_size_mv"
                        tools:text="@string/club_value" />

                    <TextView
                        style="@style/textColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/usual_padding"
                        android:gravity="center_horizontal"
                        android:text="@string/euros"
                        android:textSize="@dimen/club_name_size" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>